force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <label>Leave Balance</label>
    <pluralLabel>Leave Balances</pluralLabel>
    <nameField>
        <label>Balance Number</label>
        <type>AutoNumber</type>
        <displayFormat>BAL-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>