force-app/main/default/objects/Leave_Balance__c/fields/Annual_Total_Available__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_Available__c</fullName>
    <formula>Annual_Leave__c + Carryover_Annual_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Total Available</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>