force-app/main/default/objects/Leave_Balance__c/fields/Balance_Year__c.field-meta.xml
<CustomField>
    <fullName>Balance_Year__c</fullName>
    <label>Balance Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>