force-app/main/default/objects/Leave_Balance__c/fields/Carryover_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Expiry_Date__c</fullName>
    <label>Carryover Expiry Date</label>
    <type>Date</type>
</CustomField>