force-app/main/default/objects/Leave_Balance__c/fields/Carryover_Run_Key__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Run_Key__c</fullName>
    <label>Carryover Run Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>