force-app/main/default/objects/Leave_Balance__c/fields/Carryover_Source_Year__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Source_Year__c</fullName>
    <label>Carryover Source Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>