force-app/main/default/objects/Leave_Balance__c/fields/Personal_Leave__c.field-meta.xml
<CustomField>
    <fullName>Personal_Leave__c</fullName>
    <label>Personal Leave</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>