force-app/main/default/objects/Leave_Balance__c/fields/Reset_Run_Key__c.field-meta.xml
<CustomField>
    <fullName>Reset_Run_Key__c</fullName>
    <label>Reset Run Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>