force-app/main/default/objects/Leave_Balance__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leave Balances</relationshipLabel>
    <relationshipName>Leave_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>